--- a/package.json
+++ b/package.json
@@ -1,6 +1,22 @@
 {
   "name": "gmxApplicationConstructor",
   "devDependencies": {
-    "gulp": "^3.8.10"
+    "async": "^0.9.0",
+    "bower": "~1.3.12",
+    "cheerio": "^0.19.0",
+    "event-stream": "~3.1.7",
+    "glob": "~4.2.1",
+    "gulp": "*",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-concat": "^2.4.2",
+    "gulp-css-rebase-urls": "0.0.5",
+    "gulp-util": "^3.0.1",
+    "lodash": "~2.4.1",
+    "request": "^2.54.0",
+    "rework": "^1.0.1",
+    "rework-plugin-url": "^1.1.0",
+    "rimraf": "~2.2.8",
+    "semver": "^4.1.0",
+    "validator": "^4.3.0"
   }
 }
